--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -79,7 +79,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true"
             android:layout_alignStart="@id/imageView3"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:scaleType="fitXY" />
 
         <ImageButton
@@ -189,16 +189,17 @@
 
             <ImageView
                 android:layout_width="30dp"
-                android:layout_height="50dp"
+                android:layout_height="30dp"
                 android:src="@drawable/big_bar_l"
-                android:scaleType="fitXY"/>
+                android:scaleType="centerInside"
+                android:paddingLeft="16dp" />
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:background="@drawable/big_bar_1px"
-                android:layout_height="50dp"
-                android:paddingLeft="25dp">
+                android:layout_height="30dp"
+                android:paddingLeft="20dp">
 
                 <!--<ImageButton-->
                     <!--android:layout_width="30dp"-->
@@ -206,21 +207,21 @@
                     <!--android:id="@+id/imageButton" />-->
 
                 <SeekBar
-                    android:layout_width="170dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="120dp"
+                    android:layout_height="15dp"
                     android:id="@+id/seekBar"
                     android:max="100"
-                    android:layout_marginTop="15dp"
                     android:progress="0"
                     android:thumb="@drawable/shape_seek"
-                    android:paddingTop="3dp" />
+                    android:layout_marginTop="8dp" />
             </LinearLayout>
 
             <ImageView
                 android:layout_width="30dp"
-                android:layout_height="50dp"
+                android:layout_height="30dp"
                 android:src="@drawable/big_bar_r"
-                android:scaleType="fitXY" />
+                android:scaleType="centerInside"
+                android:paddingRight="15dp" />
         </LinearLayout>
         <!--</GridLayout>-->
 
@@ -236,7 +237,7 @@
                 android:layout_width="30dp"
                 android:layout_height="65dp"
                 android:src="@drawable/big_bar_l"
-                android:scaleType="fitXY"/>
+                android:scaleType="centerCrop"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -244,7 +245,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Next song : ไม่ต่างกัน - 25 Hours"
                 android:textSize="20dp"
-                android:paddingTop="25dp"
+                android:paddingTop="27dp"
                 android:background="@drawable/big_bar_1px"
                 android:id="@+id/textNameSong"
                 android:textColor="@android:color/black"
@@ -254,30 +255,25 @@
                 android:layout_width="30dp"
                 android:layout_height="65dp"
                 android:src="@drawable/big_bar_r"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
         </LinearLayout>
         <FrameLayout
-            android:layout_width="25dp"
-            android:layout_height="70dp"
+            android:layout_width="15dp"
+            android:layout_height="30dp"
             android:id="@+id/framelayout"
             android:layout_above="@+id/linearLayout2"
             android:layout_alignTop="@+id/layout_seekBar"
-            android:layout_alignStart="@+id/layout_seekBar"
-            android:layout_toStartOf="@+id/imageView3"
-            android:layout_alignParentRight="false"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentStart="false"
-            android:paddingRight="5dp">
+            android:layout_alignStart="@+id/imageView3">
 
             <ImageButton
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:id="@+id/bt_mute"
                 android:src="@drawable/speaker"
                 android:background="@null"
                 android:scaleType="fitXY"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="8.5dp"
                 android:layout_gravity="right" />
         </FrameLayout>
 
