--- a/app/src/main/res/layout/dj_infomation_page.xml
+++ b/app/src/main/res/layout/dj_infomation_page.xml
@@ -21,13 +21,20 @@
                 android:layout_gravity="center"
                 android:gravity="center">
 
-                <com.example.user.seedapp.com.add.view.RoundedImageView
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/imageDJ"
-                    android:layout_gravity="center"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"/>
+
+                <!--<com.example.user.seedapp.com.add.view.RoundedImageView-->
+                    <!--android:layout_width="110dp"-->
+                    <!--android:layout_height="110dp"-->
+                    <!--android:id="@+id/imageDJ"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:scaleType="fitXY"-->
+                    <!--android:layout_centerHorizontal="true" />-->
             </RelativeLayout>
 
         </LinearLayout>
