--- a/app/src/main/res/layout/dj_infomation_page.xml
+++ b/app/src/main/res/layout/dj_infomation_page.xml
@@ -15,17 +15,23 @@
             android:layout_height="match_parent"
             android:layout_weight="5">
 
+
             <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:gravity="center">
+                android:gravity="center"
+                android:id="@+id/relalayout">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/imageDJ"
                     android:layout_width="110dp"
-                    android:layout_height="110dp"/>
+                    android:layout_height="110dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="false"
+                    android:layout_marginLeft="25dp"
+                    android:layout_centerVertical="true" />
 
                 <!--<com.example.user.seedapp.com.add.view.RoundedImageView-->
                     <!--android:layout_width="110dp"-->
@@ -35,7 +41,17 @@
                     <!--android:layout_centerVertical="true"-->
                     <!--android:scaleType="fitXY"-->
                     <!--android:layout_centerHorizontal="true" />-->
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:id="@+id/viewsep"
+                    android:background="#000"
+                    android:layout_alignParentEnd="true"></View>
+
+
             </RelativeLayout>
+
+
 
         </LinearLayout>
         <LinearLayout
@@ -43,6 +59,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="6">
+
 
             <RelativeLayout
                 android:layout_width="match_parent"
