--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -248,7 +248,7 @@
                 android:scaleType="centerCrop"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="250dp"
                 android:layout_height="65dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Next song : ไม่ต่างกัน - 25 Hours"
@@ -263,8 +263,7 @@
                 android:focusableInTouchMode="true"
                 android:scrollHorizontally="true"
                 android:layout_centerHorizontal="true"
-                android:singleLine="true"
-                android:maxWidth="300sp"/>
+                android:singleLine="true" />
 
             <ImageView
                 android:layout_width="30dp"
