--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -69,10 +69,9 @@
         <View
             android:layout_width="300dp"
             android:layout_height="2dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
-            android:layout_below="@+id/textNowPlayingLay"
-            android:id="@+id/viewseparate"></View>
+            android:id="@+id/viewseparate"
+            android:layout_alignBottom="@+id/layout_seekBar"
+            android:layout_alignEnd="@+id/linearLayout2"></View>
 
         <ImageView
             android:layout_width="150dp"
@@ -244,9 +243,9 @@
                 android:layout_width="250dp"
                 android:layout_height="65dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Next song : ไม่ต่างกัน - 25 Hours"
+                android:text="ม่ต่างกัน - 25 Hours"
                 android:textSize="20dp"
-                android:paddingTop="25dp"
+                android:paddingTop="27dp"
                 android:background="@drawable/big_bar_1px"
                 android:id="@+id/textNameSong"
                 android:textColor="@android:color/black"
@@ -257,7 +256,8 @@
                 android:scrollHorizontally="true"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:freezesText="true"/>
+                android:freezesText="true"
+                android:paddingLeft="80dp" />
 
             <ImageView
                 android:layout_width="30dp"
@@ -266,6 +266,28 @@
                 android:scaleType="centerCrop" />
 
         </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="200dp"
+            android:layout_height="65dp"
+            android:layout_below="@+id/viewseparate"
+            android:layout_alignEnd="@+id/bt_lyrics"
+            android:layout_alignStart="@+id/viewseparate">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Next :"
+                android:id="@+id/textView3"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"
+                android:textIsSelectable="false"
+                android:paddingTop="4.5dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:paddingLeft="20dp" />
+        </FrameLayout>
+
         <FrameLayout
             android:layout_width="20dp"
             android:layout_height="30dp"
@@ -345,4 +367,5 @@
         <!--</RelativeLayout>-->
     </RelativeLayout>
     </ScrollView>
+
 </LinearLayout>
