--- a/app/src/main/res/layout/fragment_list_page.xml
+++ b/app/src/main/res/layout/fragment_list_page.xml
@@ -19,9 +19,25 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Now Playing : "
-                android:id="@+id/name"
+                android:id="@+id/now_playing"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Text"
+                android:id="@+id/name"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_toRightOf="@+id/name"
+                android:layout_toEndOf="@+id/name"
+                android:layout_centerInParent="true"
+                android:ellipsize="marquee"
+                android:focusableInTouchMode="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:focusable="true"
+                android:singleLine="true" />
         </RelativeLayout>
 
         <RelativeLayout
