--- a/app/src/main/res/layout/fragment_youtube.xml
+++ b/app/src/main/res/layout/fragment_youtube.xml
@@ -18,7 +18,8 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Now Playing : "
             android:id="@+id/now_playing"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,7 +34,8 @@
             android:focusableInTouchMode="true"
             android:focusable="true"
             android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"/>
+            android:marqueeRepeatLimit="marquee_forever"
+            android:layout_marginLeft="5dp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -56,8 +58,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="visible"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:layout_weight="16">
 
     </FrameLayout>
