--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -23,7 +23,8 @@
                 android:scrollHorizontally="true"
                 android:text="Now Playing : "
                 android:id="@+id/now_playing"
-                android:layout_centerVertical="true" />
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp" />
 
             <TextView
                 android:layout_width="wrap_content"
