--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -38,7 +38,8 @@
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:singleLine="true"
-                android:marqueeRepeatLimit="marquee_forever"/>
+                android:marqueeRepeatLimit="marquee_forever"
+                android:layout_marginLeft="5dp" />
         </RelativeLayout>
 
         <RelativeLayout
