--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -55,19 +55,18 @@
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="16dp"
                 android:text="Now Playing : "
                 android:textColor="@android:color/white"
                 android:layout_marginLeft="5dp"
-                />
+                android:gravity="center" />
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="16dp"
                 android:ellipsize="marquee"
@@ -80,7 +79,8 @@
                 android:layout_centerHorizontal="true"
                 android:textColor="@android:color/white"
                 android:singleLine="true"
-                />
+                android:gravity="center"
+                android:layout_marginTop="10dp" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -263,7 +263,6 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="ม่ต่างกัน - 25 Hours"
                 android:textSize="20dp"
-                android:paddingTop="26dp"
                 android:background="@drawable/big_bar_1px"
                 android:id="@+id/textNameSong"
                 android:textColor="@android:color/black"
@@ -275,7 +274,8 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:freezesText="true"
-                android:paddingLeft="80dp" />
+                android:paddingLeft="80dp"
+                android:gravity="center_vertical" />
 
             <ImageView
                 android:layout_width="30dp"
