--- a/app/src/main/res/layout/dj_infomation_page.xml
+++ b/app/src/main/res/layout/dj_infomation_page.xml
@@ -75,6 +75,7 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="DJ "
                     android:id="@+id/name_dj"
+                    android:textSize="18dp"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true" />
                 <View
@@ -98,7 +99,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text=""
-                    android:textSize="18dp"
+                    android:textSize="17dp"
                     android:id="@+id/online_time"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true" />
@@ -108,21 +109,21 @@
                     android:background="#000"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"></View>
+                    android:layout_alignParentBottom="true"></View>
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1">
+                android:layout_weight="1.1">
 
 
                 <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:text="TEXT TO DJ"
                     android:id="@+id/text_dj"
+                    android:textSize="16dp"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true" />
             </RelativeLayout>
