--- a/app/src/main/res/layout/dj_infomation_page.xml
+++ b/app/src/main/res/layout/dj_infomation_page.xml
@@ -120,12 +120,12 @@
 
                 <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="33dp"
+                    android:layout_height="28dp"
                     android:text="TEXT TO DJ"
                     android:id="@+id/text_dj"
-                    android:textSize="14dp"
                     android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_centerHorizontal="true"
+                    android:textSize="10dp" />
             </RelativeLayout>
         </LinearLayout>
 
