--- a/app/src/main/res/layout/fragment_list_page.xml
+++ b/app/src/main/res/layout/fragment_list_page.xml
@@ -13,19 +13,20 @@
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:background="#ffffffff"
-            android:layout_weight="1">
+            android:layout_weight="1.5"
+            android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Now Playing : "
                 android:id="@+id/now_playing"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
                 android:textSize="16dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="center" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -33,8 +34,6 @@
                 android:text=" "
                 android:id="@+id/name"
                 android:textSize="16dp"
-                android:layout_marginTop="5dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_toRightOf="@+id/name"
                 android:layout_toEndOf="@+id/name"
                 android:layout_centerInParent="true"
@@ -42,7 +41,9 @@
                 android:focusableInTouchMode="true"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:focusable="true"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAlignment="center" />
         </LinearLayout>
 
         <RelativeLayout
