--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -22,9 +22,9 @@
                 android:layout_height="match_parent"
                 android:id="@+id/back_bt_web"
                 android:src="@android:drawable/arrow_down_float"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:background="#000000" />
+                android:layout_alignParentTop="false"
+                android:background="#000000"
+                android:layout_alignParentRight="true" />
 
             <TextView
                 android:layout_width="wrap_content"
