--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="@drawable/seedapp_bg"
+    android:layout_height="match_parent"
     android:gravity="center_vertical"
     tools:context="${relativePackage}.${activityClass}"
     android:weightSum="10">
@@ -33,11 +33,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="7.5"
-        >
+        android:background="@drawable/seedapp_bg">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="6.5"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/linearLayout">
 
@@ -85,7 +84,10 @@
                         android:layout_marginTop="4dp" />
                 </LinearLayout>
             </RelativeLayout>
-
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textNowPlayingLay">
             <View
                 android:layout_width="300dp"
                 android:layout_height="2dp"
@@ -95,7 +97,6 @@
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:layout_below="@+id/textNowPlayingLay"
                 android:id="@+id/imageView3"
                 android:src="@drawable/seed_head"
                 android:layout_gravity="center_horizontal"
@@ -387,6 +388,7 @@
             <!--android:layout_marginRight="15dp"-->
             <!--android:singleLine="true" />-->
             <!--</RelativeLayout>-->
+            </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
 
