--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -112,8 +112,8 @@
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:layout_alignTop="@+id/imageView3"
-                android:layout_alignLeft="@+id/bt_list"
-                android:layout_alignStart="@+id/bt_list" />
+                android:layout_toRightOf="@+id/imageView3"
+                android:layout_toEndOf="@+id/imageView3" />
 
             <!--<Button-->
             <!--style="?android:attr/buttonStyleSmall"-->
@@ -139,9 +139,8 @@
                 android:scaleType="fitXY"
                 android:layout_marginTop="21dp"
                 android:layout_below="@+id/bt_youtube"
-                android:layout_toRightOf="@+id/framelayout_seek"
-                android:layout_toEndOf="@+id/framelayout_seek"
-                android:layout_marginLeft="15dp" />
+                android:layout_toRightOf="@+id/imageView3"
+                android:layout_toEndOf="@+id/imageView3" />
 
             <!--<Button-->
             <!--style="?android:attr/buttonStyleSmall"-->
@@ -165,8 +164,8 @@
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:layout_alignTop="@+id/bt_list"
-                android:layout_toLeftOf="@+id/layout_seekBar"
-                android:layout_toStartOf="@+id/layout_seekBar" />
+                android:layout_toLeftOf="@+id/imageView3"
+                android:layout_toStartOf="@+id/imageView3" />
 
             <!--<ImageButton-->
             <!--style="?android:attr/buttonStyleSmall"-->
@@ -189,10 +188,9 @@
                 android:src="@drawable/unlock_lylics"
                 android:background="@null"
                 android:scaleType="fitXY"
-                android:layout_below="@+id/bt_list"
-                android:layout_alignLeft="@+id/bt_list"
-                android:layout_alignStart="@+id/bt_list"
-                android:layout_marginTop="20dp" />
+                android:layout_above="@+id/viewseparate"
+                android:layout_toRightOf="@+id/imageView3"
+                android:layout_toEndOf="@+id/imageView3" />
 
 
             <!--<GridLayout-->
@@ -293,8 +291,8 @@
                 android:layout_width="200dp"
                 android:layout_height="65dp"
                 android:layout_below="@+id/viewseparate"
-                android:layout_alignLeft="@+id/bt_play"
-                android:layout_alignStart="@+id/bt_play">
+                android:layout_alignLeft="@+id/linearLayout2"
+                android:layout_alignStart="@+id/linearLayout2">
 
                 <TextView
                     android:layout_width="wrap_content"
