--- a/app/src/main/res/layout/dj_infomation_page.xml
+++ b/app/src/main/res/layout/dj_infomation_page.xml
@@ -35,7 +35,7 @@
                     android:layout_width="2dp"
                     android:layout_height="match_parent"
                     android:id="@+id/viewsep"
-                    android:background="#000"
+                    android:background="#8f8f8f"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
@@ -81,7 +81,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:background="#000"
+                    android:background="#8f8f8f"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
                     android:layout_alignParentBottom="true"
@@ -106,7 +106,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:background="#000"
+                    android:background="#8f8f8f"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
                     android:layout_alignParentBottom="true"></View>
@@ -124,7 +124,10 @@
                     android:layout_height="35dp"
                     android:text="TEXT TO DJ"
                     android:id="@+id/text_dj"
-                    android:layout_centerHorizontal="true" />
+                    android:background="#8f8f8f"
+                    android:layout_centerInParent="true"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp" />
 
             </RelativeLayout>
         </LinearLayout>
