--- a/app/src/main/res/layout/dj_infomation_page.xml
+++ b/app/src/main/res/layout/dj_infomation_page.xml
@@ -13,7 +13,8 @@
             android:orientation="horizontal"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="5">
+            android:layout_weight="5"
+            android:layout_gravity="center">
 
 
             <RelativeLayout
@@ -28,7 +29,9 @@
                     android:id="@+id/imageDJ"
                     android:layout_width="110dp"
                     android:layout_height="110dp"
-                    android:layout_centerInParent="true" />
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="30dp" />
 
                 <View
                     android:layout_width="2dp"
@@ -60,7 +63,7 @@
             android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="6">
+            android:layout_weight="5">
 
 
             <RelativeLayout
